# GenAI_New

./: .gitignore  README.md
Gitingest/: Anthropic_try.py  digest.txt  visit_codebasetest.py
Langgraph_project/ReAct/: pyproject.toml
Langgraph_project/Reflexion/: agent_output_20250113_021524.json  agent_output_20250113_021524.txt  agent_output_20250113_022027.json  agent_output_20250113_022027.txt  agent_output_20250113_022049.json  agent_output_20250113_022049.txt  chains.py  main.py  tool_executor.py  utils.py
Langgraph_project/reflection_Agent/: main.py  pyproject.toml
all_agents_tutorials/: Scraper_Langchain.ipynb  dashboard_data.json  news_tldr_langgraph.ipynb
all_agents_tutorials/Langgraph0118/: code_gen_with_RAG_self-correction.ipynb  langgraph_adaptiveRAG_cohere.ipynb  prompt_Gen_from_user_requirements.ipynb
first_app_MutiAgent4Stock/: README.md  agents.py  langchain.ipynb  main.py  requirements.txt  tasks.py
first_app_MutiAgent4Stock/tools/: search.py
