[tool.poetry]
name = "langgraph-react"
version = "0.1.0"
description = ""
authors = ["Eden Marco <emarco177@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.17"
langgraph = "^0.0.44"
langchain-openai = "^0.1.6"
langchainhub = "^0.1.15"
black = "^24.4.2"
isort = "^5.13.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
